@@ -417,10 +417,7 @@
    (<email>shooby@gnome.hu</email>). Please send all comments,
    suggestions, and bug reports to the <ulink
    url="http://bugs.gnome.org" type="http">GNOME bug tracking
-   database</ulink>. (Instructions for submitting bug reports can be
-   found
-   <ulink url="http://bugs.gnome.org/Reporting.html" type="http">
-   on-line</ulink>.) You can also use the
+   database</ulink>. You can also use the
    <application>Bug Report Tool</application>
    (<command>bug-buddy</command>) for submitting bug reports.
   </para>
